Fix subfield header alignment, refs #7329

--- a/plugins/arDominionPlugin/css/less/scaffolding.less
+++ b/plugins/arDominionPlugin/css/less/scaffolding.less
@@ -804,6 +804,7 @@ div#content > table.table {
       padding: 0;
       margin: 0;
       text-align: left;
+      vertical-align: top;
       display: inline-block;
       border: 0;
       &:after {
